fixes mobile cutoff fully

--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ body, html {
 /* Main container */
 .main {
     display: flex;
-    height: calc(100vh - 52px);
+    height: calc(100dvh - 52px);
 }
 
 .checkbox-wrapper {
